--- a/app.json
+++ b/app.json
@@ -10,7 +10,8 @@
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#ffffff",
+     "scheme": "app-scheme"
     },
     "ios": {
       "supportsTablet": true
