--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "deviceprogramming",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "expo": "~54.0.23",
+    "expo-router": "^6.0.14",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-web": "^0.21.0"
   },
   "private": true
 }
