--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "expo": "~54.0.23",
+    "expo-auth-session": "~7.0.8",
+    "expo-random": "^14.0.1",
     "expo-router": "^6.0.14",
     "expo-status-bar": "~3.0.8",
+    "expo-web-browser": "~15.0.9",
+    "firebase": "^12.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
